--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,12 @@ html {
   border: none;
 }
 
+.btn:hover {
+  background-color: #fff;
+
+  color: #15114c;
+}
+
 @media only screen and (min-width: 60em) {
 
   .logo {
